[Fix]Change the display on mobile phone.

--- a/web/css/light.css
+++ b/web/css/light.css
@@ -51,36 +51,32 @@ tr.even.expandRow > :hover { background: rgb(249, 249, 249, 0.5) !important; }
 tr.odd.expandRow > :hover { background: rgba(255, 255, 255, 0.5) !important; }
 .expandRow > td { padding: 0 !important; border-top: 0px !important; }
 #cpu, #ram, #hdd, #network, #traffic { min-width: 55px; max-width: 100px; }
-
+/*
 @media only screen and (max-width: 992px) {
 	#location, tr td:nth-child(4)		{ display:none; visibility:hidden; }
-}
+}*/
 @media only screen and (max-width: 720px) {
-	#type, tr td:nth-child(3)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(4)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(5)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 600px) {
-	#type, tr td:nth-child(3)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(4)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#load, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 533px) {
-	#type, tr td:nth-child(3)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(4)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(8)		{ display:none; visibility:hidden; }
-	#load, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#network, tr td:nth-child(8)			{ display:none; visibility:hidden; }
 }
 @media only screen and (max-width: 450px) {
 	body								{ font-size: 10px; }
 	.content 							{ padding: 0; }
-	#name, tr td:nth-child(2)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
-	#type, tr td:nth-child(3)			{ display:none; visibility:hidden; }
-	#location, tr td:nth-child(4)		{ display:none; visibility:hidden; }
-	#uptime, tr td:nth-child(5)			{ display:none; visibility:hidden; }
-	#traffic, tr td:nth-child(8)		{ display:none; visibility:hidden; }
-	#hdd, tr td:nth-child(11)		{ display:none; visibility:hidden; }
+	#name, tr td:nth-child(3)			{ min-width: 20px; max-width: 60px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+	#type, tr td:nth-child(4)			{ display:none; visibility:hidden; }
+	#location, tr td:nth-child(5)		{ display:none; visibility:hidden; }
+	#uptime, tr td:nth-child(6)			{ display:none; visibility:hidden; }
+	#network, tr td:nth-child(8)		{ display:none; visibility:hidden; }
 	#cpu, #ram { min-width: 20px; max-width: 40px; }
 }
